--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
+    "handlebars": "^4.7.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
